# thefuck-rs

./: .clippy.toml  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  crates.js  help.html  rustfmt.toml  search-index.js  settings.html  src-files.js  tarpaulin.toml
.github/: CONTRIBUTING.md  README.md  dependabot.yml
.github/workflows/: ci.yml  coverage.yml  dependabot.yml  pages.yml  release.yml
examples/: command_usage.rs
search.desc/thefuck_rs/: thefuck_rs-desc-0-.js
src/: error.rs  lib.rs  main.rs
src/cli/: mod.rs
src/core/: mod.rs
src/thefuck_rs/: error.rs.html  lib.rs.html
src/thefuck_rs/cli/: mod.rs.html
src/thefuck_rs/config/: mod.rs.html
src/thefuck_rs/core/: mod.rs.html
src/thefuck_rs/rules/: mod.rs.html
src/thefuck_rs/shells/: mod.rs.html
src/thefuck_rs/types/: mod.rs.html
src/thefuck_rs/utils/: mod.rs.html
src/types/: mod.rs
thefuck_rs/: all.html  constant.NAME.html  constant.VERSION.html  index.html  sidebar-items.js
thefuck_rs/cli/: index.html  struct.Cli.html
thefuck_rs/config/: index.html
thefuck_rs/core/: fn.run.html  index.html
thefuck_rs/error/: enum.TheFuckError.html  index.html  sidebar-items.js  trait.ErrorContext.html  type.TheFuckResult.html
thefuck_rs/rules/: index.html
thefuck_rs/shells/: index.html
thefuck_rs/types/: enum.Shell.html  index.html  sidebar-items.js  struct.Command.html  struct.CommandResult.html  struct.CorrectedCommand.html  struct.ParsedCommand.html
thefuck_rs/utils/: index.html
trait.impl/clap_builder/derive/: trait.Args.js  trait.CommandFactory.js  trait.FromArgMatches.js  (+1 more)
(+18 files in other folders)
