[package]
name = "thefuck-rs"
version = "0.0.1"
edition = "2024"
authors = ["Hai Pham Ngoc <ngochai285nd@gmail.com>"]
description = "A magnificent app which corrects your previous console command"
license = "MIT"
repository = "https://github.com/haiphamcoder/thefuck-rs"

[dependencies]
# CLI và argument parsing
anyhow = "1.0.98"
clap = { version = "4.5.42", features = ["derive"] }
thiserror = "2.0.12"

# Async runtime
tokio = { version = "1.47.1", features = ["full"] }

# Process and system
sysinfo = "0.36.1"
which = "8.0.0"
dirs = "6.0.0"

# Configuration
serde = { version = "1.0.219", features = [ "derive" ] }
serde_json = "1.0.142"
toml = "0.9.4"
config = "0.15.13"

# String manipulation
regix = "0.1.0"
fuzzy-matcher = "0.3.7"

# Terminal UI
crossterm = "0.29.0"
tui = { version = "0.19.0", features = [ "crossterm"] }
colored = "3.0.0"

# Logging
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

# Testing
proptest = "1.7.0"
mockall = "0.13.1"

[dev-dependencies]
tempfile = "3.20.0"
assert_cmd = "2.0.17"
predicates = "3.1.3"
